CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(deimos C)
FIND_PACKAGE(JNI REQUIRED)
SET(CMAKE_C_STANDARD 99)

ADD_DEFINITIONS(-DDSO_DLFCN)
INCLUDE_DIRECTORIES(${JNI_INCLUDE_DIRS} ./includes)
FILE(GLOB SOURCES ./src/*.c)

ADD_EXECUTABLE(deimos ${SOURCES})
TARGET_LINK_LIBRARIES(deimos dl)
INSTALL(TARGETS deimos RUNTIME DESTINATION ${CMAKE_HOME_DIRECTORY}/../../../target)