# From main target folder :
# cmake -G "MinGW Makefiles"  ..\src\native\phobos -DCMAKE_BUILD_TYPE=MINSIZEREL -DCMAKE_TOOLCHAIN_FILE=..\src\native\toolchains\Windows64.cmake
# mingw32-make install/strip

CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(phobos C)
SET(CMAKE_C_STANDARD 99)
FIND_PACKAGE(JNI)

IF(JNI_FOUND)
  INCLUDE_DIRECTORIES(SYSTEM ${JNI_INCLUDE_DIRS})
ELSE()
  INCLUDE_DIRECTORIES(SYSTEM
    $ENV{JAVA_HOME}/include
    $ENV{JAVA_HOME}/include/linux
  )
ENDIF()

ADD_DEFINITIONS(
    -D_UNICODE
    -DUNICODE
    -DPRG_VERSION_MAJOR=1
    -DPRG_VERSION_MINOR=0
    -DPRG_VERSION_PATCH=0
)

INCLUDE_DIRECTORIES (./include)
FILE(GLOB SOURCES src/*.c)

ADD_EXECUTABLE(phobos ${SOURCES} resources/phobos.rc)
INSTALL(TARGETS phobos RUNTIME DESTINATION ${CMAKE_HOME_DIRECTORY}/../../../target)
