CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(jsvc C)
FIND_PACKAGE(JNI REQUIRED)
SET(CMAKE_C_STANDARD 99)

MESSAGE(STATUS "JNI_FOUND => ${JNI_FOUND}")
MESSAGE(STATUS "JAVA_HOME => ${JAVA_HOME}")

ADD_DEFINITIONS(-DDSO_DLFCN)
INCLUDE_DIRECTORIES(${JNI_INCLUDE_DIRS})
FILE(GLOB SOURCES native/*.c)

ADD_EXECUTABLE(jsvc ${SOURCES})
TARGET_LINK_LIBRARIES(jsvc dl)
