CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(jsvc C)
FIND_PACKAGE(JNI REQUIRED)
SET(CMAKE_C_STANDARD 99)

ADD_DEFINITIONS(-DDSO_DLFCN)
INCLUDE_DIRECTORIES(${JNI_INCLUDE_DIRS})
FILE(GLOB SOURCES native/*.c)

ADD_EXECUTABLE(jsvc ${SOURCES})
TARGET_LINK_LIBRARIES(jsvc dl)
INSTALL(TARGETS jsvc RUNTIME DESTINATION ${CMAKE_HOME_DIRECTORY}/../../target/bin)