# cmake -DCMAKE_BUILD_TYPE=MINSIZEREL -DCMAKE_INSTALL_PREFIX=.. .
# mingw32-make install/strip

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7)
PROJECT(procrun C)

ADD_DEFINITIONS(
    -D_UNICODE
    -DUNICODE
    -DPRG_VERSION_MAJOR=1
    -DPRG_VERSION_MINOR=0
    -DPRG_VERSION_PATCH=16
)

INCLUDE_DIRECTORIES (./include)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(apps/prunmgr)
ADD_SUBDIRECTORY(apps/prunsrv)