FIND_PACKAGE(JNI)
IF(JNI_FOUND)
  INCLUDE_DIRECTORIES(SYSTEM ${JNI_INCLUDE_DIRS})
ELSE()
  IF(NOT JAVA_HOME)
    SET(JAVA_HOME /usr/lib/jvm/default-java)
  ENDIF()
  INCLUDE_DIRECTORIES(SYSTEM
    ${JAVA_HOME}/include
    ${JAVA_HOME}/include/linux
  )
ENDIF()

FILE(GLOB SOURCES *.c)
ADD_LIBRARY (daemon STATIC ${SOURCES})
