FIND_PACKAGE(JNI)
MESSAGE(STATUS "JNI_FOUND => ${JNI_FOUND}")
MESSAGE(STATUS "JAVA_HOME => ${JAVA_HOME}")

IF(JNI_FOUND)
  INCLUDE_DIRECTORIES(SYSTEM ${JNI_INCLUDE_DIRS})
  MESSAGE(STATUS "DOSSIER JNI => ${JNI_INCLUDE_DIRS}")
ELSE()
  INCLUDE_DIRECTORIES(SYSTEM
    ${JAVA_HOME}/include
    ${JAVA_HOME}/include/linux
  )
ENDIF()

FILE(GLOB SOURCES *.c)
ADD_LIBRARY (daemon STATIC ${SOURCES})
